finish project hk4